updated poms with astronomer urls and metadata

--- a/analytics-cli/pom.xml
+++ b/analytics-cli/pom.xml
@@ -18,7 +18,7 @@
       <artifactId>kotlin-stdlib</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.segment.analytics.java</groupId>
+      <groupId>io.astronomer.analytics.java</groupId>
       <artifactId>analytics</artifactId>
       <version>${project.version}</version>
     </dependency>
