--- a/analytics-cli/pom.xml
+++ b/analytics-cli/pom.xml
@@ -5,7 +5,7 @@
 
   <parent>
     <artifactId>analytics-parent</artifactId>
-    <groupId>com.segment.analytics.java</groupId>
+    <groupId>io.astronomer.analytics.java</groupId>
     <version>2.0.0-RC5-SNAPSHOT</version>
   </parent>
 
@@ -18,7 +18,7 @@
       <artifactId>kotlin-stdlib</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.segment.analytics.java</groupId>
+      <groupId>io.astronomer.analytics.java</groupId>
       <artifactId>analytics</artifactId>
       <version>${project.version}</version>
     </dependency>
