--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,13 @@
     <version>7</version>
   </parent>
 
-  <groupId>com.segment.analytics.java</groupId>
+  <groupId>io.astronomer.analytics.java</groupId>
   <artifactId>analytics-parent</artifactId>
   <version>2.0.0-RC5-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Analytics for Java (Parent)</name>
   <description>The hassle-free way to add analytics to your Android app.</description>
-  <url>https://github.com/segmentio/analytics-java</url>
+  <url>https://github.com/astronomerio/analytics-java</url>
 
   <modules>
     <module>analytics-core</module>
@@ -49,15 +49,15 @@
   </properties>
 
   <scm>
-    <url>https://github.com/segmentio/analytics-java/</url>
-    <connection>scm:git:https://github.com/segmentio/analytics-java.git</connection>
-    <developerConnection>scm:git:git@github.com:segmentio/analytics-java.git</developerConnection>
+    <url>https://github.com/astronomerio/analytics-java/</url>
+    <connection>scm:git:https://github.com/astronomerio/analytics-java.git</connection>
+    <developerConnection>scm:git:git@github.com:astronomerio/analytics-java.git</developerConnection>
     <tag>HEAD</tag>
   </scm>
 
   <issueManagement>
     <system>GitHub Issues</system>
-    <url>https://github.com/segmentio/analytics-java/issues</url>
+    <url>https://github.com/astronomerio/analytics-java/issues</url>
   </issueManagement>
 
   <licenses>
